@@ -3,6 +3,6 @@ channels:
 dependencies:
     - python>=3.8
     - pip
-    - iris>=3.1,!=3.2.0,!=3.2.0.post0
+    - iris>=3.5
     - cartopy>=0.20
     - hdf5!=1.12.2
