@@ -1,7 +1,11 @@
 """Helper module for NEMO data."""
 
+import warnings
+
 import iris
 import numpy as np
+from iris.analysis import WeightedAggregator
+from iris.coords import CellMeasure
 from iris.exceptions import CoordinateNotFoundError
 
 _nemo_horizontal_coords = (
@@ -55,7 +59,7 @@ def has_depth(cube):
     return len(tuple(depth_coords(cube))) > 0
 
 
-def spatial_weights(cube, domain_file, grid):
+def _add_cell_size(cube, domain_file, grid):
     """Compute cell weights for spatial averaging in 2d and 3d"""
     domain = iris.load(domain_file)
     e1, e2 = (  # NEMO grid scale factors in horizontal directions
@@ -66,7 +70,17 @@ def spatial_weights(cube, domain_file, grid):
     if is_3d:
         e3 = domain.extract(f"e3{grid.lower()}_0")[0][0]
     weights = e1 * e2 * e3 if is_3d else e1 * e2
-    return np.broadcast_to(weights.data, cube.shape)
+    weights = np.broadcast_to(weights.data, cube.shape)
+    if is_3d:
+        cell_size = CellMeasure(
+            weights, var_name="cell_size", units="m3", measure="volume"
+        )
+    else:
+        cell_size = CellMeasure(
+            weights, var_name="cell_size", units="m2", measure="area"
+        )
+    dims = tuple(range(len(weights.shape)))
+    cube.add_cell_measure(cell_size, dims)
 
 
 def remove_unique_attributes(cube):
@@ -74,3 +88,20 @@ def remove_unique_attributes(cube):
     for attribute in drop:
         cube.attributes.pop(attribute, None)
     return cube
+
+
+def compute_global_aggregate(cube, domain, grid, operation: WeightedAggregator):
+    _add_cell_size(cube, domain, grid)
+    with warnings.catch_warnings():
+        # Suppress warning about insufficient metadata.
+        warnings.filterwarnings(
+            "ignore",
+            "Collapsing a multi-dimensional coordinate.",
+            UserWarning,
+        )
+        global_aggregate = cube.collapsed(
+            spatial_coords(cube),
+            operation,
+            weights="cell_size",
+        )
+    return global_aggregate
